from package_name.models.entities.base_entity import BaseEntity


class CourseEntity(table=True):
    __tablename__ = "boilerplate_course"
    name : str






